--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
 	"type": "module",
 	"dependencies": {
 		"@threlte/core": "^6.0.0-next.2",
+		"@threlte/extras": "^5.0.0-next.5",
+		"@types/three": "^0.150.1",
 		"three": "^0.151.3"
 	}
 }
