--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource/source-code-pro": "^4.5.14",
 		"@threlte/core": "^6.0.0-next.2",
 		"@threlte/extras": "^5.0.0-next.5",
 		"@types/three": "^0.150.1",
