--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
 		"@threlte/core": "^6.0.0-next.2",
 		"@threlte/extras": "^5.0.0-next.5",
 		"@types/three": "^0.150.1",
+		"jsbarcode": "^3.11.5",
 		"three": "^0.151.3"
 	}
 }
