--- a/package.json
+++ b/package.json
@@ -30,5 +30,13 @@
 		"typescript": "^5.0.0",
 		"vite": "^4.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@fontsource/source-code-pro": "^4.5.14",
+		"@threlte/core": "^6.0.0-next.2",
+		"@threlte/extras": "^5.0.0-next.5",
+		"@types/three": "^0.150.1",
+		"jsbarcode": "^3.11.5",
+		"three": "^0.151.3"
+	}
 }
